# shredstream-proxy

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  arp.sh  b  bench_be_to_sink.sh  bench_be_udp_vs_xdp.sh  bench_forward_udp_vs_xdp.sh  bench_parallel_udp_vs_xdp.sh  bench_shredstream_latency.sh  bench_udp_vs_xdp_comprehensive.sh  bench_udp_vs_xdp_tx.sh  bench_xdp_fast_dedup.sh  docker-compose.yml  nic_tune.sh  nic_watch.sh  p  run_proxy.sh  rust-toolchain.toml  s  test_udp_mode.sh  test_xdp_mode.sh
.github/actions/setup-rust/: action.yaml
.github/workflows/: build.yml  release.yml  test.yml
examples/: Cargo.toml  README.md  deshred.rs
examples/deshred/: Cargo.toml
examples/deshred/src/: main.rs
jito_protos/: Cargo.toml  build.rs
jito_protos/src/: convert.rs  lib.rs
proxy/: Cargo.toml
proxy/src/: deshred.rs  forwarder.rs  heartbeat.rs  main.rs  multicast_config.rs  server.rs  token_authenticator.rs  udp_blaster.rs  xdp.rs  xdp_blaster.rs
scripts/: create-test-listeners.sh  create_test_listeners.sh  get_tvu_port.sh
src/: forwarder.rs  heartbeat.rs  main.rs  token_authenticator.rs
