[workspace]
members = [
    "jito_protos",
    "proxy"
]

[workspace.package]
version = "0.1.7"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://jito-labs.gitbook.io/mev/searcher-services/shredstream for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"

resolver = "2"

[workspace.dependencies]
arc-swap = "1.6"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
histogram = "0.7.2"
hostname = "0.3.1"
itertools = "0.12"
jito-protos = { path = "jito_protos" }
log = "0.4.17"
prost = "0.12"
prost-types = "0.12"
protobuf-src = "1.1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
signal-hook = "0.3"
solana-client = "=1.17"
solana-measure = "=1.17"
solana-metrics = "=1.17"
solana-net-utils = "=1.17"
solana-perf = "=1.17"
solana-sdk = "=1.17"
solana-streamer = "=1.17"
thiserror = "1"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.10.2"
