[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
solana-perf = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "fdf71bcbb0d962305854884c16335e6c4271b1f2" }
solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "fdf71bcbb0d962305854884c16335e6c4271b1f2" }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
