[package]
name = "jito-shredstream-proxy"
version = { workspace = true }
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://docs.jito.wtf/lowlatencytxnfeed/ for details."
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
core_affinity = "0.8.3"
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
hostname = { workspace = true }
itertools = { workspace = true }
jito-protos = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
rayon = {workspace = true}
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
ctrlc = "3"
solana-client = { workspace = true }
solana-entry = { workspace = true }
solana-ledger = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-packet = "3.0.0"
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
agave-xdp = {workspace = true}
caps = {workspace =  true}
libc = "0.2"
nix = {version = "0.27", features = ["socket"]} 

[[bin]]
name = "xdp-blaster"
path = "src/xdp_blaster.rs"

[[bin]]
name = "udp-blaster"
path = "src/udp_blaster.rs"
